--- a/settings.json
+++ b/settings.json
@@ -9,13 +9,13 @@
 	"auto_leave_msg": true,
 	"prefix": ".",
 	"language":"ind",
-	"ownerNumber": "6283830815715",
-	"ownerNumberr": "6283830815715",
+	"ownerNumber": "6282124245042",
+	"ownerNumberr": "6282124245042",
 	"cr": "@Xarzz",
 	"ownername": "OwnerXarzz",
-	"botname":"Xarzz",
+	"botname":"OneOneBotzz",
 	"thumb":"thumbnail_1.jpg",
 	"thumbnail":"thumbnail_2.jpg",
 	"fakethumb":"thumbnail_1.jpg", 
-	"fake": " 「  Xarzz  」\nCreated By @Xarzz"
+	"fake": " 「  One  」\nCreated By @Xarzz"
 }
